# stoary

./: CMakeLists.txt  GetDLLs.cmake
server/: README.md  mix.exs
server/config/: config.exs
server/lib/: stoary.ex
server/lib/stoary/: http.ex
server/test/: stoary_server_test.exs
source/: CMakeLists.txt  main.cpp
source/qml/: MainWindow.qml  main.qml
source/qml/Stoary/Pages/: ProjectPage.qml  RemoteProjectsPage.qml
source/qml/Stoary/Utils/: HTTPRequest.qml
source/qml/Stoary/Windows/: ProjectsWindow.qml
